# image_proc

livshits_a_b/: CMakeLists.txt
livshits_a_b/prj/: CMakeLists.txt
livshits_a_b/prj/kursach/: CMakeLists.txt  kursach.cpp  markdown.txt
livshits_a_b/prj/lab_1_1/: CMakeLists.txt  lab_1_1.cpp
livshits_a_b/prj/lab_1_2/: CMakeLists.txt  lab_1_2.cpp
livshits_a_b/prj/lab_2/: CMakeLists.txt  lab_2.cpp
livshits_a_b/prj/lab_3/: CMakeLists.txt  lab_3.cpp
